--- a/index.html
+++ b/index.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Banner</title>
+    <title>Home Decor Store</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="image-container">
-            <img src="image1.png" alt="Tabletop Accessories" class="banner-image active">
-            <img src="image2.png" alt="Coffee & Side Table" class="banner-image">
-            <img src="image3.png" alt="Planter" class="banner-image">
-            <img src="image4.png" alt="Clock" class="banner-image">
+        <div class="image-section">
+            <img src="image1.png" alt="Decorative Items">
         </div>
-        <div class="text-container">
-            <h2>Complementary Furnitures</h2>
-            <p class="category" data-image="0">Tabletop Accessories</p>
-            <p class="category" data-image="1">Coffee & Side Table</p>
-            <p class="category" data-image="2">Planter</p>
-            <p class="category" data-image="3">Clock</p>
-            <p>Add sincerity and warmth to your home...</p>
-            <button>See More</button>
+        <div class="text-section">
+            <a href="link1.html" class="category-link">Complementary Furnitures</a>
+            <a href="link2.html" class="category-link">Tabletop Accessories</a>
+            <a href="link3.html" class="category-link">Coffee & Side Table</a>
+            <a href="link4.html" class="category-link">Planter</a>
+            <a href="link5.html" class="category-link">Clock</a>
+            <a href="explore.html" class="button-explore">Keşfet</a>
         </div>
     </div>
-    <script src="scripts.js"></script>
 </body>
 </html>
