--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <a href="link3.html" class="category-link">Coffee & Side Table</a>
             <a href="link4.html" class="category-link">Planter</a>
             <a href="link5.html" class="category-link">Clock</a>
+            <div class="description">
+                Add sincerity and warmth to your home with our Oobj brand, where you can find many colorful home decorations from coffee tables to dressers, from umbrella stands to woodsheds and even wine stands.
+            </div>
             <a href="explore.html" class="button-explore">Keşfet</a>
         </div>
     </div>
